--- a/学习中.md
+++ b/学习中.md
@@ -1,3 +1,5 @@
+[toc]
+
 1. linux 思维导图 
 
         https://www.processon.com/view/link/5f80748f1e085307a07fa38c
@@ -8,7 +10,7 @@
 
 3. 了解架构
             
-    
+   
         https://www.processon.com/diagraming/5e757585e4b011fccea4bcef
     
 4. mysql 思维导图
