--- a/数据结构.md
+++ b/数据结构.md
@@ -1,4 +1,7 @@
+[toc]
+
 ## 一致性哈希。
+
 将所有节点都分配到0-2^32-1的环上面，所有数据，都按顺时针，存储到他就近的节点上面。
 所有机器按2^32取模。
 https://mp.weixin.qq.com/s/bnuo7knTnp1U7ggEh840iQ
