--- a/算法题.md
+++ b/算法题.md
@@ -1,4 +1,9 @@
+[toc]
+
+
+
 ## 1.查询最长子串
+
 ```
 <?php
 
@@ -336,10 +341,10 @@ insert into order values(xxxx, xxxx, 5);
 
 # 求每个渠道的转换率
 select channel,sum(register)/sum(activate) as per from t where activate_time = '2020-03-10' group by channel;
- 
+
  # 是很大的文件，每一行都是一个数。最大的一个数值。
  1，2，3，2，3，4，5
- 
+
  # 二叉树的反转
  ````
  <?php
