--- a/计算机网络.md
+++ b/计算机网络.md
@@ -1,5 +1,9 @@
 
 
+[toc]
+
+
+
 # 关闭TCP连接的四次挥手
 
 第一次分手：主机1（可以使客户端，也可以是服务器端），设置Sequence Number和Acknowledgment Number，向主机2发送一个FIN报文段；此时，主机1进入FIN_WAIT_1状态；这表示主机1没有数据要发送给主机2了；
