--- a/算法题.md
+++ b/算法题.md
@@ -33,21 +33,24 @@ print_r(getString($str));
 ```
 <?php
 
-function getCows($years) 
+function getCows($years)
 {
-	static $count = 1;
-	for ($i = 1; $i < $years; $i++) {
-		if ($i >= 4 && $i < 15) {
-			$count++;
-			getCows($i - 1);
-		}
-
-		if ($i == 20) {
-			$count--;
-		}
-	}
-
-	return $count;
+//    看第一只牛算1岁还是0岁
+    $cowMap[1] = 1;
+    $count = 0;
+    for ($i = 1; $i < $years; $i++) {
+        for ($j = 19; $j > 0; $j--) {
+            $cowMap[$j] = $cowMap[$j - 1] ?? 0;
+        }
+        $cowMap[0] = 0;
+        for ($j = 4; $j < 15; $j++) {
+            $cowMap[0] += $cowMap[$j] ?? 0;
+        }
+    }
+    array_walk($cowMap, function ($value) use (&$count) {
+        $count += $value;
+    });
+    return $count;
 }
 ```
 
