将MLS改为了MSL 报文最大生存时间

--- a/计算机网络.md
+++ b/计算机网络.md
@@ -65,8 +65,8 @@ HTTP 明文传输，数据都是未加密的，安全性较差，HTTPS（SSL+HTT
 HTTP 页面响应速度比 HTTPS 快，主要是因为 HTTP 使用 TCP 三次握手建立连接，客户端和服务器需要交换 3 个包，而 HTTPS除了 TCP 的三个包，还要加上 ssl 握手需要的 9 个包，所以一共是 12 个包。
 http 和 https 使用的是完全不同的连接方式，用的端口也不一样，前者是 80，后者是 443。
 HTTPS 其实就是建构在 SSL/TLS 之上的 HTTP 协议，所以，要比较 HTTPS 比 HTTP 要更耗费服务器资源。
-# TIME-WAIT 是什么，为什么必须等待 2MLS
-TIME-WAIT 是一种 TCP 状态。等待 2MLS 可以保证客户端最后一个报文段能够到达服务器，如果未到达，服务器则会超时重传连接释放报文段，使得客户端、服务器都可以正常进入到 CLOSE(关闭) 状态
+# TIME-WAIT 是什么，为什么必须等待 2MSL
+TIME-WAIT 是一种 TCP 状态。等待 2MSL 可以保证客户端最后一个报文段能够到达服务器，如果未到达，服务器则会超时重传连接释放报文段，使得客户端、服务器都可以正常进入到 CLOSE(关闭) 状态
 # cookie、session的联系和区别，多台web服务器如何共享session？
 cookie在客户端保存状态，session在服务器端保存状态。但是由于在服务器端保存状态的时候，在客户端也需要一个标识，所以session也可能要借助cookie来实现保存标识位的作用。
 
